Fix alignment issues for mobile view, fix wrapping of presentation box (space), fix quotation box signature alignment, change some appearance of the content (size, font color, ...etc)

--- a/styles.css
+++ b/styles.css
@@ -14,30 +14,28 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;    
     background-color: rgb(1, 0, 59);
     padding: 16px;
-    min-width: 200px;
+    /* width: 1024px; */
+    min-width: 671px;
 }
 
-.header .logo {
-    padding-left: 100px;
-    padding-right: 32px;
-    min-width: 255px;
-}
+/* .header .logo {
+} */
 
 .header .logo a{
-    min-width: 123px;
+    min-width: 146px;
     text-decoration: none;
     color:white;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
 }
 
-.header .links {
-    padding-right: 150px;
-}
+/* .header .links {
+    padding-left: 150px;
+} */
 
 .header .links ul {
     display: flex;
@@ -84,15 +82,18 @@ body {
 .container .textbox {
     display: flex;
     flex-direction: column;
+    padding: 0 24px;
 }
 
 .container .textbox .title {
-    font-size: 40px;
+    font-size: 48px;
     font-weight: 900;   
 }
 
 .container .textbox .p {
-    color: rgba(255, 255, 255, 0.767);
+    color: #E5E7EB;
+    font-size: 18px;
+    line-height: 28px;
 }
 
 .container .textbox button[id=sign-up] {
@@ -102,7 +103,7 @@ body {
     color: white;
     font-size: 17px;
     font-weight: 600;
-    background-color: rgb(58, 142, 252);
+    background-color: #3882F6;
     border: 0;
     cursor: pointer;
 }
@@ -116,7 +117,7 @@ body {
 }
 
 .container .textbox .title, .container .textbox .p {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .presentation .textbox, .presentation .image{
@@ -181,12 +182,12 @@ body {
 .quote-box {
     display: flex;
     justify-content: center;
-    background-color: #99f7d950;
+    align-items: center;
+    background-color: #E5E7EB;
 }
 
 .quote {
-    margin: 100px 200px;
-    margin-bottom: 50px;
+    margin: 50px 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -195,15 +196,22 @@ body {
 }
 
 .quote .text {
-    font-size: 30px;
+    font-size: 36px;
+    font-weight: lighter;
     font-style: italic;
+    color: #1F2937;
     width: 680px;
+    min-width: 671px;
 }
 
 .quote .signature {
+    flex-grow: 0;
+    flex-shrink: 0;
     font-weight: 800;
     font-size: 18px;
+    text-align: center;
     align-self: self-end;
+    min-width: 278px;
 }
 
 /* -------------------------------------------------------- */
@@ -253,7 +261,7 @@ body {
 }
 
 .banner-box .sign-up_banner button[id=sign-up] {
-    background-color: rgb(58, 142, 252);
+    background-color: #3882F6;
     border: 2px solid white;
     width: 130px;
     height: 40px;
